# twolinkman

./: README.md
python/: Inv_kinematics.ipynb  inverse_kinematics.ipynb  test.py
python/.ipynb_checkpoints/: inverse_kinematics-checkpoint.ipynb  main-checkpoint.ipynb  simsetup-checkpoint.ipynb
python/archive/pidnn/: main.py
python/archive/regression-based-tuning-model/: main.ipynb  neural-network.ipynb
python/inv-kin/: inverse_kinematics.ipynb
python/notebook/: main.ipynb  simsetup.ipynb
python/pidnn/: README.md  ctc.py  main.py  roslauncher.py  train-dataset-001
python/regression-based-tuning-model/: main.py  rawdata.pickle  roslauncher.py
python/regression-based-tuning-model/.ipynb_checkpoints/: gen_al-checkpoint.ipynb
python/trajectory-following/: data.txt  hw_data.txt  main.py  plots.ipynb
python/workspace-mapping/: dir_kinematics.ipynb
simulink/: ada.slx  adpative.slx  twolinkman.slx  twolinkman_adaptive.slx
twolinkman_description/: CMakeLists.txt  package.xml
twolinkman_description/config/: twolinkman_control.yaml
twolinkman_description/launch/: twolinkman_control.launch  twolinkman_gazebo.launch  twolinkman_pid_control .launch
twolinkman_description/meshes/: base_link.STL  front_link.STL  load_link.STL  rear_link.STL
twolinkman_description/urdf/: twolinkman.gazebo  twolinkman.urdf  twolinkman.xacro
twolinkman_description/worlds/: twolinkman_gazebo.world
twolinkman_gazebo/: CMakeLists.txt  package.xml
twolinkman_gazebo/launch/: twolinkman_gazebo.launch
twolinkman_gazebo/models/: model.config  model.sdf
(+69 files in other folders)
