<package>
  <name>twolinkman_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for twolinkman</p>
    <p>This package contains Gazebo world, 3D models and launch files
for twolinkman robot</p>
  </description>
  <author>me</author>
  <maintainer email="aniketkok10@gmail.com" />
  <license>BSD</license>  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <!-- run_depend>rrbot_control</run_depend -->
  <run_depend>twolinkman_description</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>